# rp2040-tester

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h
src/: main.c
